cnn for classifying rock,paper scissors images

--- a/targilBait2/rock_paper_scissors.ipynb
+++ b/targilBait2/rock_paper_scissors.ipynb
@@ -13,7 +13,7 @@
     "# Nir Ben Boaz 208246090\n",
     "### Readme: loads the data from rps-cv-images file\n",
     "### the model has around 96.5 - 97 % accuracy\n",
-    "### increasing numbers of epochs from 10 to 20 didnt change the accuracy (might be worse)\n"
+    "### increasing numbers of epochs from 10 to 20 didnt change the accuracy much\n"
    ],
    "id": "8dd1171c56cb1546"
   },
@@ -23,8 +23,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-25T19:24:40.494175Z",
-     "start_time": "2025-11-25T19:24:40.489070Z"
+     "end_time": "2025-12-23T06:50:28.078618Z",
+     "start_time": "2025-12-23T06:50:14.954884Z"
     }
    },
    "source": [
@@ -36,7 +36,7 @@
     "from sklearn.model_selection import train_test_split"
    ],
    "outputs": [],
-   "execution_count": 138
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -47,8 +47,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-25T19:24:40.509708Z",
-     "start_time": "2025-11-25T19:24:40.505485Z"
+     "end_time": "2025-12-23T06:51:32.404529Z",
+     "start_time": "2025-12-23T06:51:32.398425Z"
     }
    },
    "cell_type": "code",
@@ -64,13 +64,13 @@
    ],
    "id": "ed23d57826ebe485",
    "outputs": [],
-   "execution_count": 139
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-25T19:24:45.344259Z",
-     "start_time": "2025-11-25T19:24:40.592997Z"
+     "end_time": "2025-12-23T06:51:41.739471Z",
+     "start_time": "2025-12-23T06:51:33.757281Z"
     }
    },
    "cell_type": "code",
@@ -101,13 +101,13 @@
      ]
     }
    ],
-   "execution_count": 140
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-25T19:24:45.358200Z",
-     "start_time": "2025-11-25T19:24:45.352773Z"
+     "end_time": "2025-12-23T06:51:51.467578Z",
+     "start_time": "2025-12-23T06:51:51.459582Z"
     }
    },
    "cell_type": "code",
@@ -127,7 +127,7 @@
      ]
     }
    ],
-   "execution_count": 141
+   "execution_count": 5
   },
   {
    "metadata": {},
