q-learning and deep RL, dice blackjack

--- a/targilBait2/rock_paper_scissors.ipynb
+++ b/targilBait2/rock_paper_scissors.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "source": [
     "# Nir Ben Boaz 208246090\n",
-    "### Readme: loads the data from rps-cv-images file\n",
+    "### loads the images from rps-cv-images folder\n",
     "### the model has around 96.5 - 97 % accuracy\n",
     "### increasing numbers of epochs from 10 to 20 didnt change the accuracy much\n"
    ],
@@ -333,7 +333,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "",
-   "id": "d97536e80750c6de"
+   "id": "71d25af2eb2e15fb"
   }
  ],
  "metadata": {
